--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activities.AdminActivity"
+            android:name=".activities.CaretakerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
