--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity
             android:name=".activities.CaretakerActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
