Tweaked the add house bottom sheet fragment a little bit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     //  Kotlin scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha02"
+
+    //  Lottie
+    def lottieVersion = "5.2.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
